--- a/POSVTA4/ticketsresumen.html
+++ b/POSVTA4/ticketsresumen.html
@@ -89,13 +89,10 @@
     const db = getFirestore(app);
 
     // Usuario actual
-const user = JSON.parse(localStorage.getItem("usuario_ruta") || "{}");
-const uid = user?.uid;
-
-if (!uid) {
-  alert("Sesión no válida. Vuelve a iniciar sesión.");
-  throw new Error("UID no encontrado");
-}
+// if (!uid) {
+//   alert("Sesión no válida. Vuelve a iniciar sesión.");
+//   throw new Error("UID no encontrado");
+// }
 
 const q = query(
   collection(db, "ventas_rutav2"),
