--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
   <div class="apps">
    <a href="AJUSTEZAPATA/AJUZAPATA.html"> AJUSTE ZAPATA </a>
   </div>
+  <div class="apps">
+   <a href="POSV3/index.html"> POS VENTA V3 </a>
+  </div>
+  
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
