--- a/POSV3/index.html
+++ b/POSV3/index.html
@@ -342,6 +342,21 @@ window.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+<!-- =====================================================
+     🚀 CORE POS V3
+     ===================================================== -->
+<script src="./js/core/persistencia.js"></script>
+<script src="./js/core/carrito.js"></script>
+<script src="./js/core/totales.js"></script>
+<script src="./js/core/descuento.js"></script>
+<script src="./js/core/scanner.js"></script>
+<script src="./js/core/cobro.js"></script>
+<script src="./js/core/ticket.js"></script>
+<script src="./js/core/telegram.js"></script>
+<script src="./js/core/render.js"></script>
+
+<!-- ORQUESTADOR -->
+<script src="./js/app.js"></script>
 
 <!-- =====================================================
      🌐 SERVICE WORKER
