--- a/POSV3/index.html
+++ b/POSV3/index.html
@@ -352,7 +352,7 @@ window.addEventListener("DOMContentLoaded", () => {
 <script src="./js/core/scanner.js"></script>
 <script src="./js/core/cobro.js"></script>
 <script src="./js/core/ticket.js"></script>
-<script src="./js/core/telegram.js"></script>
+<!-- <script src="./js/core/telegram.js"></script> -->
 <script src="./js/core/render.js"></script>
 
 <!-- ORQUESTADOR -->
