--- a/POSV3/index.html
+++ b/POSV3/index.html
@@ -11,7 +11,7 @@
   <title>PROVSOFT POS</title>
 
   <!-- PWA -->
-  <link rel="manifest" href="./manifest.json">
+  <!-- <link rel="manifest" href="./manifest.json"> -->
 
   <!-- FUENTE -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
