--- a/POSV3/index.html
+++ b/POSV3/index.html
@@ -345,18 +345,24 @@ window.addEventListener("DOMContentLoaded", () => {
 <!-- =====================================================
      🚀 CORE POS V3
      ===================================================== -->
+<!-- CORE ESTADO -->
 <script src="./js/core/persistencia.js"></script>
 <script src="./js/core/carrito.js"></script>
 <script src="./js/core/totales.js"></script>
 <script src="./js/core/descuento.js"></script>
+
+<!-- SCANNER (ANTES DEL APP) -->
 <script src="./js/core/scanner.js"></script>
+
+<!-- UI / FLUJO -->
 <script src="./js/core/cobro.js"></script>
 <script src="./js/core/ticket.js"></script>
 <!-- <script src="./js/core/telegram.js"></script> -->
 <script src="./js/core/render.js"></script>
 
-<!-- ORQUESTADOR -->
+<!-- 🔥 ORQUESTADOR (OBLIGATORIO) -->
 <script src="./js/app.js"></script>
+
 
 <!-- =====================================================
      🌐 SERVICE WORKER
